fixed issue with background being broke if your form was too long

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
+  background: url(warehouse.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;
 }
